# FinslerMetrics

./: README.md
source/: CMakeLists.txt  DartConfiguration.tcl  GenerateFinslerianMetrics.cxx  GenerateRiemannianMetrics.cxx  README.txt  itkMultiScaleOrientedFluxBasedMeasureImageFilter.cxx  itkMultiScaleOrientedFluxBasedMeasureImageFilter.h  itkMultiScaleOrientedFluxBasedMeasureImageFilter.hxx  itkOrientedFluxCrossSectionTraceMeasure.h  itkOrientedFluxMatrixImageFilter.h  itkOrientedFluxMatrixImageFilter.hxx
source/data/: OP_1.nrrd  Real-DSA-01.tiff  Real-DSA-02.tif  Synthetic-02.tiff
writing/: FourierTransofrms.tex  MetricConstruction.tex
